Fixing vertical alignment so other columns do not scroll down.

--- a/media/default/css/base-profile.css
+++ b/media/default/css/base-profile.css
@@ -38,13 +38,19 @@
 }
 
 .activity_title {
+  vertical-align: text-top;
   padding: 5px 5px 5px 0px;
   width:60%;
 }
 
 .activity_points {
+  vertical-align: text-top;
   width:10%;
   padding: 5px 0px;
+}
+
+.activity_options {
+  vertical-align: text-top;
 }
 
 #content .profile_table {
